--- a/css/main.css
+++ b/css/main.css
@@ -800,3 +800,6 @@ a.label:hover,a.badge:hover{color:#ffffff;text-decoration:none;cursor:pointer;}
 .show{display:block;}
 .invisible{visibility:hidden;}
 .affix{position:fixed;}
+body{margin:0px;padding:0px;background-color:#000;color:#FFF;text-align:center;}
+img{position:absolute;top:50%;left:50%;margin:-270px 0px 0px -270px;width:542px;height:542px;}
+p{position:absolute;bottom:20px;width:100%;}
