--- a/less/main.less
+++ b/less/main.less
@@ -3,3 +3,25 @@
 @iconSpritePath: "../bootstrap/img/glyphicons-halflings.png";
 @iconWhiteSpritePath: "../bootstrap/img/glyphicons-halflings-white.png";
 
+body {
+	margin:0px;
+	padding:0px;
+	background-color:#000;
+	color:#FFF;
+	text-align:center;
+}
+
+img {
+	position:absolute;
+	top:50%;
+	left:50%;
+	margin:-270px 0px 0px -270px;
+	width:542px;
+	height:542px;
+}
+
+p {
+	position:absolute;
+	bottom:20px;
+	width:100%;
+}
